Bug 224204 - ftp:// or http:// URL do no longer open konqueror window
Summary: ftp:// or http:// URL do no longer open konqueror window
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Michael Pyne
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-01-25 19:38 UTC by Martin Koller
Modified: 2010-01-31 22:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Add a context for non-local URLs that seem valid (1.23 KB, patch)
2010-01-31 20:07 UTC, Michael Pyne
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2010-01-25 19:38:14 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

Since 4.4 RC2 I can no longer open a konqueror window by entering a http:// or ftp:// URL into krunner (Locations plugin is checked).

Probably a regression due to fix for bug #221371 ?
Comment 1 Michael Pyne 2010-01-31 20:02:13 UTC
Recommending as a 4.4 blocker due to the noticeable regression it leads to.
Comment 2 Michael Pyne 2010-01-31 20:07:38 UTC
Created attachment 40418 [details]
Add a context for non-local URLs that seem valid

Proposed kdelibs fix for 4.4 and trunk.
Comment 3 Michael Pyne 2010-01-31 22:21:01 UTC
SVN commit 1083222 by mpyne:

Fix a regression introduced in one of the 4.4 RCs in KDE 4.4, bug 224204 (http / ftp
URLs do not open web browser in KRunner). Pretty sure I'd tested it, but not thouroughly
enough it appears. I will forwardport shortly.

Patch reviewed by Marco Martin.

CCBUG:224204


 M  +6 -1      runnercontext.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1083222
Comment 4 Michael Pyne 2010-01-31 22:22:15 UTC
SVN commit 1083225 by mpyne:

Forwardport KDE 4.4 bugfix for KRunner (bug 224204, ftp/http URLs don't open web browser)
to KDE 4.5. Patch reviewed by Marco Martin.

BUG:224204


 M  +6 -1      runnercontext.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1083225