Forwardport KDE 4.4 bugfix for KRunner (bug 224204, ftp/http URLs don't open web browser) to KDE 4.5. Patch reviewed by Marco Martin.

BUG:224204

svn path=/trunk/KDE/kdelibs/; revision=1083225